--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -105,6 +105,8 @@ skip-if = e10s # Bug ?????? - no about:home support yet
 skip-if = os == "linux" # Bug 1073339 - Investigate autocomplete test unreliability on Linux 
 [browser_action_searchengine.js]
 skip-if = os == "linux" # Bug 1073339 - Investigate autocomplete test unreliability on Linux 
+[browser_action_searchengine_alias.js]
+skip-if = os == "linux" # Bug 1073339 - Investigate autocomplete test unreliability on Linux 
 [browser_addKeywordSearch.js]
 skip-if = e10s
 [browser_alltabslistener.js]
