--- a/toolkit/components/places/tests/unifiedcomplete/xpcshell.ini
+++ b/toolkit/components/places/tests/unifiedcomplete/xpcshell.ini
@@ -26,6 +26,7 @@ tail =
 [test_match_beginning.js]
 [test_multi_word_search.js]
 [test_queryurl.js]
+[test_searchEngine_alias.js]
 [test_searchEngine_current.js]
 [test_searchEngine_host.js]
 [test_searchEngine_restyle.js]
