--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -198,7 +198,6 @@ skip-if = e10s # Bug 691614 - no e10s zoom support yet
 [browser_bug555767.js]
 skip-if = e10s # Bug 916974 - Session history doesn't work in e10s
 [browser_bug556061.js]
-skip-if = e10s # Bug 932651 - getClipboardData in specialpowersAPI.js not e10s friendly
 [browser_bug559991.js]
 skip-if = e10s # Bug 691614 - no e10s zoom support yet
 [browser_bug561623.js]
@@ -445,7 +444,7 @@ skip-if = e10s
 [browser_urlbarAutoFillTrimURLs.js]
 skip-if = e10s
 [browser_urlbarCopying.js]
-skip-if = e10s # Bug 932651 - getClipboardData in specialpowersAPI.js not e10s friendly
+skip-if = e10s # Bug 1069757 - browser_urlbarCopying.js needs e10s love.
 [browser_urlbarEnter.js]
 skip-if = e10s # Bug ?????? - obscure non-windows child process crashes on try
 [browser_urlbarRevert.js]
