--- a/browser/installer/removed-files.in
+++ b/browser/installer/removed-files.in
@@ -64,7 +64,7 @@
 # Equals Contents/Resources/ on Mac OX X and is an empty string on other
 # platforms.
 
-# File Removals
+# Common File Removals
 # This is located under the "distribution/" directory and it was added before
 # Firefox 27
 @DIR_MACOS@distribution/extensions/testpilot@labs.mozilla.com.xpi
@@ -79,7 +79,17 @@
   #endif
 #endif
 
-# Directory removals
+# Mac OS X v2 signing removals
+#ifdef XP_MACOSX
+  precomplete
+  @DIR_MACOS@active-update.xml
+  @DIR_MACOS@update-settings.ini
+  @DIR_MACOS@updates.xml
+  @DIR_MACOS@defaults/*
+  @DIR_MACOS@updates/*
+#endif
+
+# Common Directory removals
 @DIR_MACOS@chrome/
 #ifdef XP_UNIX
   #ifndef XP_MACOSX
