--- a/testing/marionette/client/marionette/tests/unit/unit-tests.ini
+++ b/testing/marionette/client/marionette/tests/unit/unit-tests.ini
@@ -72,6 +72,7 @@ b2g = true
 browser = false
 [test_single_finger_desktop.py]
 b2g = false
+skip-if = os == "win" # Bug 1025040
 
 [test_multi_finger.py]
 b2g = true
