Bug 1576358 - [wpt-sync] Update web-platform-tests metadata, a=testonly
A bug in the metadata update meant that the bot failed to update the
metadata correctly.

MANUAL PUSH: wpt sync fixup

--- a/testing/web-platform/meta/feature-policy/experimental-features/layout-animations-disabled-tentative.html.ini
+++ b/testing/web-platform/meta/feature-policy/experimental-features/layout-animations-disabled-tentative.html.ini
@@ -2,8 +2,7 @@
   disabled:
     if (os == "linux") and webrender: true
   expected:
-    if (os == "win") and debug and not webrender and (processor == "x86"): CRASH
-    if (os == "win") and debug and webrender: OK
+    if (processor == "x86") and debug: CRASH
   [Verify that animations which are not affected by the policy run as expected.]
     expected: TIMEOUT
 
@@ -2991,8 +2990,7 @@
 
   [CSS Animations: property <bottom> from [100px\] to [200px\] at (-0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [CSS Transitions with transition: all: property <bottom> from [100px\] to [200px\] at (0) should be [200px\]]
@@ -3021,8 +3019,7 @@
 
   [CSS Animations: property <bottom> from [100px\] to [200px\] at (0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [Web Animations: property <right> from [100px\] to [200px\] at (1.5) should be [200px\]]
@@ -3036,8 +3033,7 @@
 
   [CSS Animations: property <width> from [100px\] to [200px\] at (0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [Web Animations: property <left> from [100px\] to [200px\] at (1.5) should be [200px\]]
@@ -3078,13 +3074,11 @@
 
   [CSS Transitions with transition: all: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.4) should be [rgb(80, 90, 140)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <left> from [100px\] to [200px\] at (0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [CSS Transitions with transition: all: property <bottom> from [100px\] to [200px\] at (0.3) should be [200px\]]
@@ -3125,14 +3119,12 @@
 
   [CSS Animations: property <height> from [100px\] to [200px\] at (-0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [CSS Animations: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.6) should be [rgb(120, 110, 160)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [Web Animations: property <height> from [100px\] to [200px\] at (1.5) should be [200px\]]
     expected: FAIL
@@ -3145,8 +3137,7 @@
 
   [CSS Transitions: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.8) should be [rgb(160, 130, 180)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions with transition: all: property <right> from [100px\] to [200px\] at (0.5) should be [200px\]]
     expected: FAIL
@@ -3168,13 +3159,11 @@
 
   [CSS Transitions: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.2) should be [rgb(40, 70, 120)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.8) should be [rgb(160, 130, 180)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions: property <left> from [100px\] to [200px\] at (0.6) should be [200px\]]
     expected: FAIL
@@ -3187,8 +3176,7 @@
 
   [CSS Animations: property <right> from [100px\] to [200px\] at (-0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [CSS Transitions: property <bottom> from [100px\] to [200px\] at (0.5) should be [200px\]]
@@ -3196,32 +3184,28 @@
 
   [CSS Transitions with transition: all: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.6) should be [rgb(120, 110, 160)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions: property <right> from [100px\] to [200px\] at (1.5) should be [200px\]]
     expected: FAIL
 
   [CSS Animations: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.9) should be [rgb(180, 140, 190)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions: property <top> from [100px\] to [200px\] at (0.5) should be [200px\]]
     expected: FAIL
 
   [CSS Transitions: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.4) should be [rgb(80, 90, 140)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <top> from [100px\] to [200px\] at (1.5) should be [200px\]]
     expected: FAIL
 
   [CSS Animations: property <right> from [100px\] to [200px\] at (0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [Web Animations: property <top> from [100px\] to [200px\] at (0.5) should be [200px\]]
@@ -3265,8 +3249,7 @@
 
   [CSS Transitions with transition: all: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.9) should be [rgb(180, 140, 190)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions with transition: all: property <left> from [100px\] to [200px\] at (0.6) should be [200px\]]
     expected: FAIL
@@ -3276,8 +3259,7 @@
 
   [CSS Animations: property <width> from [100px\] to [200px\] at (-0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [Web Animations: property <right> from [100px\] to [200px\] at (0.3) should be [100px\]]
@@ -3297,8 +3279,7 @@
 
   [CSS Animations: property <top> from [100px\] to [200px\] at (0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [CSS Transitions with transition: all: property <width> from [100px\] to [200px\] at (0.6) should be [200px\]]
@@ -3327,8 +3308,7 @@
 
   [CSS Transitions: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.1) should be [rgb(20, 60, 110)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions: property <bottom> from [100px\] to [200px\] at (0.3) should be [200px\]]
     expected: FAIL
@@ -3338,18 +3318,15 @@
 
   [CSS Transitions: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.6) should be [rgb(120, 110, 160)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.2) should be [rgb(40, 70, 120)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.4) should be [rgb(80, 90, 140)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [Web Animations: property <right> from [100px\] to [200px\] at (-0.3) should be [100px\]]
     expected: FAIL
@@ -3371,8 +3348,7 @@
 
   [CSS Transitions with transition: all: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.1) should be [rgb(20, 60, 110)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <right> from [100px\] to [200px\] at (1.5) should be [200px\]]
     expected: FAIL
@@ -3388,8 +3364,7 @@
 
   [CSS Animations: property <height> from [100px\] to [200px\] at (0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [Web Animations: property <bottom> from [100px\] to [200px\] at (-0.3) should be [100px\]]
@@ -3397,13 +3372,11 @@
 
   [CSS Transitions with transition: all: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.8) should be [rgb(160, 130, 180)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <left> from [100px\] to [200px\] at (-0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [CSS Transitions with transition: all: property <top> from [100px\] to [200px\] at (-0.3) should be [200px\]]
@@ -3411,8 +3384,7 @@
 
   [CSS Transitions with transition: all: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.2) should be [rgb(40, 70, 120)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <width> from [100px\] to [200px\] at (1.5) should be [200px\]]
     expected: FAIL
@@ -3437,8 +3409,7 @@
 
   [CSS Transitions: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.9) should be [rgb(180, 140, 190)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [Web Animations: property <height> from [100px\] to [200px\] at (0.6) should be [200px\]]
     expected: FAIL
@@ -3469,8 +3440,7 @@
 
   [CSS Animations: property <top> from [100px\] to [200px\] at (-0.3) should be [100px\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): PASS
-      if (os == "win") and not debug and webrender: FAIL
+      if (processor == "x86") and (os == "win"): PASS
       FAIL
 
   [CSS Transitions: property <top> from [100px\] to [200px\] at (0.3) should be [200px\]]
@@ -3484,8 +3454,7 @@
 
   [CSS Animations: property <color> from [rgba(0, 50, 100, 1)\] to [rgba(200, 150, 200, 1)\] at (0.1) should be [rgb(20, 60, 110)\]]
     expected:
-      if (os == "win") and not debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and not debug and webrender: PASS
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions with transition: all: property <width> from [100px\] to [200px\] at (1.5) should be [200px\]]
     expected: FAIL
