--- a/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
+++ b/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
@@ -1,4 +1,6 @@
 [RTCPeerConnection-iceConnectionState.https.html]
+  expected:
+    if (os == "linux") and not debug and not webrender and (processor == "x86_64"): ["OK", "CRASH"]
   [connection with one data channel should eventually have connected connection state]
     bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1278299
     expected: FAIL
@@ -17,9 +19,7 @@
 
   [Responder ICE connection state behaves as expected]
     expected:
-      if (os == "linux") and not sw-e10s and debug and not webrender: [PASS, FAIL]
-      if (os == "linux") and not sw-e10s and debug and webrender: [PASS, FAIL]
-      if (os == "linux") and not sw-e10s and not debug and webrender: [PASS, FAIL]
-      if (os == "android") and debug: [PASS, FAIL]
-      if (os == "linux") and sw-e10s: [PASS, FAIL]
+      if os == "win": PASS
+      if os == "mac": PASS
+      [PASS, FAIL]
 
