--- a/testing/web-platform/meta/workers/SharedWorker-exception-propagation.html.ini
+++ b/testing/web-platform/meta/workers/SharedWorker-exception-propagation.html.ini
@@ -1,4 +1,6 @@
 [SharedWorker-exception-propagation.html]
   [Uncaught error in shared worker should not propagate to window]
-    expected: FAIL
+    expected:
+      if (os == "linux") and not debug and not webrender and (processor == "x86_64"): ["FAIL", "PASS"]
+      FAIL
 
