--- a/testing/web-platform/meta/css/css-ui/appearance-textfield-001.html.ini
+++ b/testing/web-platform/meta/css/css-ui/appearance-textfield-001.html.ini
@@ -1,7 +1,6 @@
 [appearance-textfield-001.html]
   expected:
-    if (os == "win") and debug and not webrender and (processor == "x86"): [FAIL, PASS]
-    if (os == "win") and debug and webrender: FAIL
-    if (os == "win") and debug and not webrender and (processor == "x86_64"): [PASS, FAIL]
-    if (os == "win") and (processor == "x86_64"): FAIL
-    if (os == "win") and not debug: [PASS, FAIL]
+    if (os == "win") and (processor == "x86") and debug: ["PASS", "FAIL"]
+    if (os == "win") and (processor == "x86") and not debug: ["PASS", "FAIL"]
+    if (os == "win") and (processor == "x86_64") and debug: ["FAIL", "PASS"]
+    if (os == "win") and (processor == "x86_64") and not debug: FAIL
