--- a/testing/web-platform/meta/css/motion/animation/offset-path-interpolation-005.html.ini
+++ b/testing/web-platform/meta/css/motion/animation/offset-path-interpolation-005.html.ini
@@ -1,7 +1,6 @@
 [offset-path-interpolation-005.html]
   expected:
-    if (os == "win") and debug and not webrender and (processor == "x86"): CRASH
-    if (os == "win") and debug and webrender: OK
+    if (processor == "x86") and debug: CRASH
   ["path('M 0 0 L 100 100 M 100 200 L 200 200 Z L 200 100 Z')" and "ray(0deg closest-side)" are valid offset-path values]
     expected: FAIL
 
