--- a/testing/web-platform/meta/fetch/sec-metadata/redirect/redirect-https-downgrade.tentative.sub.html.ini
+++ b/testing/web-platform/meta/fetch/sec-metadata/redirect/redirect-https-downgrade.tentative.sub.html.ini
@@ -8,7 +8,11 @@
 
   [Https downgrade prefetch => No headers]
     bug: [https://bugzilla.mozilla.org/show_bug.cgi?id=1568717, https://bugzilla.mozilla.org/show_bug.cgi?id=1569098]
-    expected: [PASS, FAIL, TIMEOUT]
+    expected:
+      if (os == "mac") and debug and (version == "OS X 10.14.5"): ["PASS", "FAIL", "TIMEOUT"]
+      if (os == "mac") and debug and (version == "OS X 10.14"): ["PASS", "FAIL", "TIMEOUT"]
+      if (os == "android") and debug: ["PASS", "FAIL", "TIMEOUT"]
+      [FAIL, PASS, TIMEOUT]
 
   [Https downgrade stylesheet => No headers]
     expected: TIMEOUT
