--- a/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
+++ b/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
@@ -1,3 +1,8 @@
 [pointerevent_movementxy_with_pointerlock.html]
   [mouse pointerevent movementX/Y with pointerlock test]
-    expected: [PASS, FAIL]
+    expected:
+      if (os == "win") and debug and webrender: ["FAIL", "PASS"]
+      if (os == "linux") and debug and webrender: ["FAIL", "PASS"]
+      if (os == "mac") and debug: ["FAIL", "PASS"]
+      [PASS, FAIL]
+
