--- a/testing/web-platform/meta/service-workers/service-worker/skip-waiting-using-registration.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/skip-waiting-using-registration.https.html.ini
@@ -3,5 +3,9 @@
     if (os == "win") and (version == "6.1.7601"): https://bugzilla.mozilla.org/show_bug.cgi?id=1425175
     if os == "linux": https://bugzilla.mozilla.org/show_bug.cgi?id=1425175
   expected:
-    if os == "mac": [OK, FAIL]
-    if os == "android": [OK, FAIL]
+    if os == "android": ["OK", "FAIL"]
+    if os == "mac": ["OK", "FAIL"]
+  [Test skipWaiting while a client is using the registration]
+    expected:
+      if (os == "mac") and debug: FAIL
+
