--- a/testing/web-platform/meta/svg/animations/correct-events-for-short-animations-with-syncbases.html.ini
+++ b/testing/web-platform/meta/svg/animations/correct-events-for-short-animations-with-syncbases.html.ini
@@ -1,10 +1,9 @@
 [correct-events-for-short-animations-with-syncbases.html]
   [Correct events for short animations with syncbases]
     expected:
-      if not debug and (processor == "x86_64") and webrender and (os == "linux"): PASS
-      if not debug and (processor == "x86"): PASS
-      if (os == "win") and not debug and not webrender and (processor == "x86_64"): [PASS, FAIL]
-      if (os == "linux") and not sw-e10s and debug and not webrender: [PASS, FAIL]
-      if (os == "linux") and not sw-e10s and debug and webrender: [PASS, FAIL]
-      if (os == "linux") and not sw-e10s and not debug and not webrender: [PASS, FAIL]
+      if (os == "linux") and not sw-e10s and not debug and not webrender and (processor == "x86_64"): ["PASS", "FAIL"]
+      if (os == "win") and (processor == "x86_64") and not webrender and not debug: ["PASS", "FAIL"]
+      if (os == "linux") and not sw-e10s and debug: ["PASS", "FAIL"]
+      if (os == "win") and (processor == "x86") and debug: ["PASS", "FAIL"]
+      if (os == "win") and (processor == "x86_64") and webrender: ["PASS", "FAIL"]
 
