Bug 1576358 - [wpt-sync] Update web-platform-tests metadata, a=testonly
MANUAL PUSH: wpt sync fixup

--- a/testing/web-platform/meta/css/css-transforms/animation/rotate-interpolation.html.ini
+++ b/testing/web-platform/meta/css/css-transforms/animation/rotate-interpolation.html.ini
@@ -1,4 +1,6 @@
 [rotate-interpolation.html]
+  expected:
+    if (processor == "x86") and debug: CRASH
   [Animation between "45deg" and "-1 1 0 60deg" at progress 0]
     expected: FAIL
     bug: https://github.com/w3c/csswg-drafts/issues/3290
