--- a/testing/web-platform/meta/css/css-transforms/animation/scale-interpolation.html.ini
+++ b/testing/web-platform/meta/css/css-transforms/animation/scale-interpolation.html.ini
@@ -1,4 +1,6 @@
 [scale-interpolation.html]
+  expected:
+    if (processor == "x86") and debug: CRASH
   [Animation between "26 17 9" and "2" at progress 1]
     expected: FAIL
     bug: https://github.com/w3c/csswg-drafts/issues/3290
