--- a/testing/web-platform/meta/css/css-transforms/animation/translate-interpolation.html.ini
+++ b/testing/web-platform/meta/css/css-transforms/animation/translate-interpolation.html.ini
@@ -1,4 +1,6 @@
 [translate-interpolation.html]
+  expected:
+    if (processor == "x86") and debug: CRASH
   [Animation between "480px 400px 320px" and "240% 160%" at progress 0]
     expected: FAIL
     bug: https://github.com/w3c/csswg-drafts/issues/3290
