--- a/testing/web-platform/meta/css/css-text-decor/text-decoration-color.html.ini
+++ b/testing/web-platform/meta/css/css-text-decor/text-decoration-color.html.ini
@@ -1,3 +1,3 @@
 [text-decoration-color.html]
   expected:
-    if (os == "linux") and not debug and not webrender: [FAIL, PASS]
+    if (os == "linux") and not debug and not webrender: ["PASS", "FAIL"]
