--- a/testing/web-platform/meta/css/css-transforms/animation/list-interpolation.html.ini
+++ b/testing/web-platform/meta/css/css-transforms/animation/list-interpolation.html.ini
@@ -1,4 +1,6 @@
 [list-interpolation.html]
+  expected:
+    if (processor == "x86") and debug: CRASH
   [CSS Animations: property <transform> from [scaleY(-3) translateX(0px) scaleX(2)\] to [scaleX(-3) scaleY(2)\] at (0.25) should be [matrix(0, 0, 0, -2.5, 0, 0)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
