--- a/browser/components/resistfingerprinting/test/browser/browser.ini
+++ b/browser/components/resistfingerprinting/test/browser/browser.ini
@@ -13,6 +13,7 @@ support-files =
 [browser_block_mozAddonManager.js]
 [browser_dynamical_window_rounding.js]
 [browser_navigator.js]
+skip-if = fission # Timeouts
 [browser_netInfo.js]
 [browser_performanceAPI.js]
 [browser_roundedWindow_dialogWindow.js]
