--- a/devtools/client/webconsole/test/browser/browser.ini
+++ b/devtools/client/webconsole/test/browser/browser.ini
@@ -73,6 +73,7 @@ support-files =
   test-iframe-wrong-hud-iframe.html
   test-iframe-wrong-hud.html
   test-image.png
+  test-image.png^headers^
   test-ineffective-iframe-sandbox-warning-inner.html
   test-ineffective-iframe-sandbox-warning-nested1.html
   test-ineffective-iframe-sandbox-warning-nested2.html
