--- a/dom/tests/mochitest/localstorage/mochitest.ini
+++ b/dom/tests/mochitest/localstorage/mochitest.ini
@@ -27,6 +27,7 @@ skip-if = os == "android" || verify # bug 962029
 [test_cookieBlock.html]
 [test_embededNulls.html]
 [test_keySync.html]
+fail-if = fission
 [test_localStorageBase.html]
 skip-if = e10s
 [test_localStorageBaseSessionOnly.html]
@@ -34,12 +35,17 @@ skip-if = e10s
 [test_localStorageEnablePref.html]
 [test_localStorageKeyOrder.html]
 [test_localStorageOriginsDiff.html]
+fail-if = fission
 [test_localStorageOriginsDomainDiffs.html]
+fail-if = fission
 [test_localStorageOriginsEquals.html]
 skip-if = toolkit == 'android'
+fail-if = fission
 [test_localStorageOriginsPortDiffs.html]
+fail-if = fission
 [test_localStorageOriginsSchemaDiffs.html]
 skip-if = toolkit == 'android' #TIMED_OUT
+fail-if = fission
 [test_localStorageQuota.html]
 skip-if = toolkit == 'android' #TIMED_OUT
 [test_localStorageQuotaSessionOnly.html]
