--- a/testing/web-platform/meta/css/filter-effects/animation/filter-interpolation-002.html.ini
+++ b/testing/web-platform/meta/css/filter-effects/animation/filter-interpolation-002.html.ini
@@ -1,123 +1,19 @@
 [filter-interpolation-002.html]
   expected:
     if (processor == "x86") and debug: CRASH
+  [Animation between "drop-shadow(0px 0px 0px currentcolor)" and "drop-shadow(20px 10px green)" at progress -1]
+    expected: FAIL
+
+  [Animation between "drop-shadow(20px 10px blue)" and "drop-shadow(20px 10px green)" at progress 2147483648]
+    expected: FAIL
+
+  [Animation between "drop-shadow(0px 0px 0px currentcolor)" and "drop-shadow(20px 10px green)" at progress 1.5]
+    expected: FAIL
+
+  [Animation between "drop-shadow(0px 0px 0px currentcolor)" and "drop-shadow(20px 10px green)" at progress 0.5]
+    expected: FAIL
+
   [CSS Transitions: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.5) should be [blur(8px) hue-rotate(90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [Web Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.5) should be [blur(8px) hue-rotate(90deg)\]]
-    expected:
-      if (os == "win") and (processor == "x86_64"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (-0.5) should be [opacity(1) hue-rotate(-90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [Web Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
-    expected:
-      if (os == "win") and (processor == "x86_64"): FAIL
-
-  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.25) should be [opacity(0.875) hue-rotate(45deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (0.5) should be [blur(10px)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [Web Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (0.5) should be [blur(10px)\]]
-    expected:
-      if (os == "win") and (processor == "x86_64"): FAIL
-
-  [CSS Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (1.5) should be [blur(10px)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (-0.5) should be [blur(4px) hue-rotate(-90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (1.5) should be [opacity(0.25) hue-rotate(270deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (1.5) should be [blur(12px) hue-rotate(270deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.25) should be [blur(7px) hue-rotate(45deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (-0.5) should be [opacity(1) hue-rotate(-90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (-0.5) should be [opacity(1) hue-rotate(-90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.5) should be [blur(8px) hue-rotate(90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (1.5) should be [opacity(0.25) hue-rotate(270deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (-0.5) should be [blur(4px) hue-rotate(-90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (1.5) should be [blur(12px) hue-rotate(270deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (0.6) should be [blur(10px)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.25) should be [blur(7px) hue-rotate(45deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.25) should be [opacity(0.875) hue-rotate(45deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.25) should be [blur(7px) hue-rotate(45deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (-0.5) should be [blur(4px) hue-rotate(-90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.25) should be [opacity(0.875) hue-rotate(45deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (1.5) should be [blur(12px) hue-rotate(270deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.5) should be [blur(8px) hue-rotate(90deg)\]]
-    expected:
-      if (processor == "x86") and (os == "win"): FAIL
-
-  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (1.5) should be [opacity(0.25) hue-rotate(270deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
@@ -129,7 +25,27 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (1.5) should be [blur(12px) hue-rotate(270deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (-0.5) should be [blur(4px) hue-rotate(-90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Animations: property <filter> from [hue-rotate(180deg)\] to [none\] at (0.5) should be [hue-rotate(90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (-0.5) should be [opacity(1) hue-rotate(-90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (0.6) should be [blur(10px)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
@@ -149,6 +65,10 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Transitions: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.25) should be [blur(7px) hue-rotate(45deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Transitions: property <filter> from [hue-rotate(180deg)\] to [none\] at (1.5) should be [hue-rotate(-90deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
@@ -158,6 +78,10 @@
       if (os == "win") and (processor == "x86_64"): FAIL
 
   [CSS Transitions: property <filter> from [none\] to [hue-rotate(180deg)\] at (0.5) should be [hue-rotate(90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.5) should be [blur(8px) hue-rotate(90deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
@@ -173,9 +97,21 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [Web Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
+    expected:
+      if (os == "win") and (processor == "x86_64"): FAIL
+
+  [CSS Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (1.5) should be [blur(10px)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Animations: property <filter> from [drop-shadow(0px 0px 0px currentcolor)\] to [drop-shadow(20px 10px green)\] at (1.5) should be [drop-shadow(rgb(0, 65, 0) 30px 15px 0px)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
+
+  [Web Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (0.5) should be [blur(10px)\]]
+    expected:
+      if (os == "win") and (processor == "x86_64"): FAIL
 
   [CSS Animations: property <filter> from [drop-shadow(20px 10px blue)\] to [drop-shadow(20px 10px green)\] at (2147483648) should be [drop-shadow(rgb(0, 255, 0) 20px 10px 0px)\]]
     expected:
@@ -193,7 +129,27 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (-0.5) should be [blur(4px) hue-rotate(-90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Transitions: property <filter> from [hue-rotate(180deg)\] to [none\] at (0.25) should be [hue-rotate(135deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [Web Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.5) should be [blur(8px) hue-rotate(90deg)\]]
+    expected:
+      if (os == "win") and (processor == "x86_64"): FAIL
+
+  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (-0.5) should be [opacity(1) hue-rotate(-90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Animations: property <filter> from [grayscale(0) blur(0px)\] to [blur(10px)\] at (0.5) should be [blur(10px)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (1.5) should be [opacity(0.25) hue-rotate(270deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
@@ -204,6 +160,10 @@
   [Web Animations: property <filter> from [none\] to [hue-rotate(180deg)\] at (0.5) should be [hue-rotate(90deg)\]]
     expected:
       if (os == "win") and (processor == "x86_64"): FAIL
+
+  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (-0.5) should be [opacity(1) hue-rotate(-90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Animations: property <filter> from [drop-shadow(0px 0px 0px currentcolor)\] to [drop-shadow(20px 10px green)\] at (-1) should be [drop-shadow(rgb(255, 255, 255) -20px -10px 0px)\]]
     expected:
@@ -221,7 +181,19 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (1.5) should be [opacity(0.25) hue-rotate(270deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (-0.5) should be [blur(4px) hue-rotate(-90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Animations: property <filter> from [hue-rotate(180deg)\] to [none\] at (-0.5) should be [hue-rotate(270deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.25) should be [opacity(0.875) hue-rotate(45deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
@@ -233,11 +205,31 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (1.5) should be [blur(12px) hue-rotate(270deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Animations: property <filter> from [hue-rotate(180deg)\] to [none\] at (0.25) should be [hue-rotate(135deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Transitions: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (1.5) should be [opacity(0.25) hue-rotate(270deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.25) should be [opacity(0.875) hue-rotate(45deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Transitions with transition: all: property <filter> from [none\] to [hue-rotate(180deg)\] at (-0.5) should be [hue-rotate(-90deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Animations: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.5) should be [opacity(0.75) hue-rotate(90deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
@@ -257,6 +249,10 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Animations: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.25) should be [blur(7px) hue-rotate(45deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Transitions: property <filter> from [drop-shadow(0px 0px 0px currentcolor)\] to [drop-shadow(20px 10px green)\] at (1.5) should be [drop-shadow(rgb(0, 65, 0) 30px 15px 0px)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
@@ -264,6 +260,10 @@
   [Web Animations: property <filter> from [drop-shadow(0px 0px 0px currentcolor)\] to [drop-shadow(20px 10px green)\] at (0.5) should be [drop-shadow(rgb(128, 192, 128) 10px 5px 0px)\]]
     expected:
       if (os == "win") and (processor == "x86_64"): FAIL
+
+  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (1.5) should be [blur(12px) hue-rotate(270deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
 
   [CSS Transitions with transition: all: property <filter> from [hue-rotate(180deg)\] to [none\] at (0.5) should be [hue-rotate(90deg)\]]
     expected:
@@ -273,7 +273,19 @@
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
+  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.25) should be [blur(7px) hue-rotate(45deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
   [CSS Transitions: property <filter> from [none\] to [hue-rotate(180deg)\] at (1.5) should be [hue-rotate(270deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions with transition: all: property <filter> from [none\] to [opacity(0.5) hue-rotate(180deg)\] at (0.25) should be [opacity(0.875) hue-rotate(45deg)\]]
+    expected:
+      if (processor == "x86") and (os == "win"): FAIL
+
+  [CSS Transitions with transition: all: property <filter> from [blur(6px)\] to [blur(10px) hue-rotate(180deg)\] at (0.5) should be [blur(8px) hue-rotate(90deg)\]]
     expected:
       if (processor == "x86") and (os == "win"): FAIL
 
