--- a/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
+++ b/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
@@ -1,9 +1,7 @@
 [pointerevent_movementxy_with_pointerlock.html]
   [mouse pointerevent movementX/Y with pointerlock test]
     expected:
-      if (os == "mac") and debug: [FAIL, PASS]
-      if (os == "android") and debug: [FAIL, PASS]
-      if (os == "linux") and webrender and debug: FAIL
-      if (os == "win") and debug and webrender: FAIL
-      if os == "mac": FAIL
+      if (os == "mac") and debug: ["FAIL", "PASS"]
+      if (os == "android") and debug: ["FAIL", "PASS"]
+      [PASS, FAIL]
 
