--- a/testing/web-platform/meta/service-workers/service-worker/navigation-preload/resource-timing.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/navigation-preload/resource-timing.https.html.ini
@@ -1,8 +1,8 @@
 [resource-timing.https.html]
   expected:
-    if (os == "linux") and not debug and not webrender and (processor == "x86_64"): [OK, TIMEOUT]
+    if (os == "linux") and not debug and not webrender and (processor == "x86_64"): ["OK", "TIMEOUT"]
   [Navigation Preload Resource Timing.]
     expected:
-      if (os == "linux") and not debug and not webrender and (processor == "x86_64"): [FAIL, TIMEOUT]
+      if (os == "linux") and not debug and not webrender and (processor == "x86_64"): ["FAIL", "TIMEOUT"]
       FAIL
 
