--- a/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
+++ b/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
@@ -1,6 +1,6 @@
 [RTCPeerConnection-iceConnectionState.https.html]
   expected:
-    if (os == "linux") and not debug and not webrender and (processor == "x86_64"): [OK, CRASH]
+    if (os == "linux") and not debug and not webrender and (processor == "x86_64"): ["OK", "CRASH"]
   [connection with one data channel should eventually have connected connection state]
     bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1278299
     expected: FAIL
@@ -21,5 +21,5 @@
     expected:
       if os == "win": PASS
       if os == "mac": PASS
-      if (os == "linux") and (processor == "x86"): FAIL
+      [PASS, FAIL]
 
