Bug 1576813 - Fixup some metadata, a=testonly
MANUAL PUSH: wpt sync fixup

--- a/testing/web-platform/meta/fetch/sec-metadata/redirect/redirect-https-downgrade.tentative.sub.html.ini
+++ b/testing/web-platform/meta/fetch/sec-metadata/redirect/redirect-https-downgrade.tentative.sub.html.ini
@@ -9,13 +9,9 @@
   [Https downgrade prefetch => No headers]
     bug: [https://bugzilla.mozilla.org/show_bug.cgi?id=1568717, https://bugzilla.mozilla.org/show_bug.cgi?id=1569098]
     expected:
-      if (os == "mac") and debug and (version == "OS X 10.14"): [PASS, FAIL, TIMEOUT]
-      if (os == "win") and not debug and not webrender and (processor == "x86"): ["PASS", "FAIL"]
-      if (os == "linux") and (processor == "x86_64") and debug and webrender: PASS
-      if (os == "win") and not debug and webrender: ["PASS", "FAIL"]
-      if (os == "linux") and (processor == "x86"): PASS
+      if (os == "win"): ["PASS", "FAIL"]
       if os == "android": PASS
-      FAIL
+      [PASS, FAIL, TIMEOUT]
 
   [Https downgrade stylesheet => No headers]
     expected: TIMEOUT
