--- a/testing/web-platform/meta/intersection-observer/v2/inline-occlusion.html.ini
+++ b/testing/web-platform/meta/intersection-observer/v2/inline-occlusion.html.ini
@@ -1,9 +1,13 @@
 [inline-occlusion.html]
+  expected:
+    if (os == "android") and debug: TIMEOUT
   [First rAF.]
     expected: FAIL
 
   [occluder.style.marginTop = '-10px']
-    expected: FAIL
+    expected:
+      if (os == "android") and debug: TIMEOUT
+      FAIL
 
   [occluder.style.opacity = 0]
     expected: FAIL
