--- a/testing/web-platform/meta/service-workers/service-worker/client-navigate.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/client-navigate.https.html.ini
@@ -3,14 +3,14 @@
     if (os == "android") and not e10s: https://bugzilla.mozilla.org/show_bug.cgi?id=1499972
     if (os == "android") and e10s: bug 1550895 (frequently fails on geckoview)
   expected:
-    if (os == "mac") and debug: ["TIMEOUT", "OK"]
+    if (os == "mac") and debug: ["OK", "TIMEOUT"]
   [Frame location should not update on failed mixed-content navigation]
     expected:
-      if (os == "mac") and debug: ["NOTRUN", "PASS"]
+      if (os == "mac") and debug: ["PASS", "NOTRUN"]
 
   [Frame location should not update on failed about:blank navigation]
     expected:
-      if (os == "mac") and debug: ["TIMEOUT", "PASS", "NOTRUN"]
+      if (os == "mac") and debug: ["PASS", "TIMEOUT", "NOTRUN"]
 
   [Frame location should update on successful navigation]
     expected:
