--- a/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
+++ b/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
@@ -17,3 +17,8 @@
     bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1307996
     expected: FAIL
 
+  [Responder ICE connection state behaves as expected]
+    expected:
+      if (os == "mac") and debug: FAIL
+      if (os == "linux") and (processor == "x86"): FAIL
+
