--- a/testing/web-platform/meta/intersection-observer/v2/cross-origin-occlusion.sub.html.ini
+++ b/testing/web-platform/meta/intersection-observer/v2/cross-origin-occlusion.sub.html.ini
@@ -1,4 +1,8 @@
 [cross-origin-occlusion.sub.html]
+  expected:
+    if (os == "android") and debug: TIMEOUT
   [Intersection observer V2 test with occlusion of target in iframe.]
-    expected: FAIL
+    expected:
+      if (os == "android") and debug: TIMEOUT
+      FAIL
 
