--- a/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
+++ b/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_movementxy_with_pointerlock.html.ini
@@ -1,11 +1,3 @@
 [pointerevent_movementxy_with_pointerlock.html]
   [mouse pointerevent movementX/Y with pointerlock test]
-    expected:
-      if (os == "win") and debug and not webrender and (processor == "x86_64"): PASS
-      if (os == "win") and debug and not webrender and (processor == "x86"): FAIL
-      if (os == "win") and debug and webrender: FAIL
-      if (os == "win") and not debug and not webrender: PASS
-      if (os == "mac") and not debug: ["FAIL", "PASS"]
-      if (os == "linux") and debug: PASS
-      [PASS, FAIL]
-
+    expected: [PASS, FAIL]
