--- a/testing/web-platform/meta/svg/animations/correct-events-for-short-animations-with-syncbases.html.ini
+++ b/testing/web-platform/meta/svg/animations/correct-events-for-short-animations-with-syncbases.html.ini
@@ -1,9 +1,8 @@
 [correct-events-for-short-animations-with-syncbases.html]
   [Correct events for short animations with syncbases]
     expected:
-      if (os == "linux") and (processor == "x86_64") and webrender and debug: ["PASS", "FAIL"]
-      if (os == "linux") and (processor == "x86_64") and webrender and not debug: ["PASS", "FAIL"]
-      if (os == "win") and debug and not webrender and (processor == "x86"): ["FAIL", "PASS"]
-      if (os == "linux") and (processor == "x86_64") and not webrender: ["PASS", "FAIL"]
-      if (os == "win") and debug and webrender: FAIL
+      if (os == "linux") and not debug and (processor == "x86_64"): ["PASS", "FAIL"]
+      if (os == "win") and debug and (processor == "x86"): ["PASS", "FAIL"]
+      if (os == "win") and not debug and (processor == "x86_64"): FAIL
+      if (os == "linux") and debug: ["FAIL", "PASS"]
 
