--- a/testing/web-platform/meta/web-locks/query-empty.tentative.https.any.js.ini
+++ b/testing/web-platform/meta/web-locks/query-empty.tentative.https.any.js.ini
@@ -15,8 +15,7 @@
 
 [query-empty.tentative.https.any.serviceworker.html]
   expected:
-    if (os == "linux") and debug and not webrender and not sw-e10s: ["OK", "TIMEOUT"]
-    if (os == "mac") and debug: TIMEOUT
+    if (os == "linux") and debug: ["OK", "TIMEOUT"]
   [query() returns dictionary with empty arrays when no locks are held]
     expected: FAIL
 
