Bug 1576813 - Update expectancies. r=jgraham
Differential Revision: https://phabricator.services.mozilla.com/D43815

--- a/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
+++ b/testing/web-platform/meta/webrtc/RTCPeerConnection-iceConnectionState.https.html.ini
@@ -19,6 +19,5 @@
 
   [Responder ICE connection state behaves as expected]
     expected:
-      if (os == "mac") and debug: FAIL
-      if (os == "linux") and (processor == "x86"): FAIL
+      if (os == "mac") and debug: ["PASS", "FAIL"]
 
