Bug 1534533 - Add geckodriver toolchain tasks. r=chmanchester
There was quite a bit of discussion of this in `#build` on IRC,
and the consensus was that geckodriver should be built as a
stand-alone Rust crate and not as part of Firefox/Gecko (say, as a new
--enable-project target). This follows that approach, and the
expression, modeled off of cbindgen but updated to cross compile from
a Linux host to all targets, is pretty straight-forward.

A sparse profile would be nice, but the way that the Gecko Cargo
workspace works means that the profile must accumulate Rust code from
many locations.

If we want to, eventually testing/geckodriver can be removed from the
top-level Rust workspace, the geckodriver-signing tasks migrated to
these toolchain tasks, consumers migrated to the signing tasks, and
geckodriver removed from the "common" test archive.

Differential Revision: https://phabricator.services.mozilla.com/D43646

--- a/taskcluster/ci/toolchain/rust.yml
+++ b/taskcluster/ci/toolchain/rust.yml
@@ -223,6 +223,20 @@ linux64-rust-android-1.37:
         ]
         toolchain-alias: linux64-rust-android
 
+linux64-rust-windows-1.37:
+    description: "rust repack with windows-cross support"
+    treeherder:
+        symbol: TL(rust-win)
+    run:
+        arguments: [
+            '--channel', '1.37.0',
+            '--host', 'x86_64-unknown-linux-gnu',
+            '--target', 'x86_64-unknown-linux-gnu',
+            '--target', 'x86_64-pc-windows-msvc',
+            '--target', 'i686-pc-windows-msvc',
+        ]
+        toolchain-alias: linux64-rust-windows
+
 win64-rust-1.28:
     treeherder:
         symbol: TW64(rust-1.28)
