Backed out 6 changesets (bug 1576407) for causing wpt and mochitest failures. CLOSED TREE
Backed out changeset 3b0498064cbf (bug 1576407)
Backed out changeset 38e4ea431445 (bug 1576407)
Backed out changeset 19bf40067233 (bug 1576407)
Backed out changeset 0ddbc451dcab (bug 1576407)
Backed out changeset 08d4c25fc670 (bug 1576407)
Backed out changeset be7cbc61f825 (bug 1576407)

--- a/dom/tests/mochitest/whatwg/mochitest.ini
+++ b/dom/tests/mochitest/whatwg/mochitest.ini
@@ -15,8 +15,6 @@ support-files =
   postMessage_throw_helper.html
   postMessage_transfer_helper.html
   postMessage_userpass_helper.html
-prefs =
-  fission.rebuild_frameloaders_on_remoteness_change=true
 
 [test_bug477323.html]
 [test_document_scripts.html]
@@ -30,13 +28,16 @@ skip-if = toolkit == 'android' #bug 894914 - wrong data - got FAIL, expected mes
 [test_postMessage_idn.xhtml]
 [test_postMessage_joined.html]
 [test_postMessage_onOther.html]
+skip-if = fission #Bug 1571273
 [test_postMessage_origin.xhtml]
 [test_postMessage_override.html]
 skip-if = fission
 [test_postMessage_special.xhtml]
 [test_postMessage_structured_clone.html]
+skip-if = fission #Bug 1570918
 [test_postMessage_throw.html]
 [test_postMessage_transfer.html]
+skip-if = fission #Bug 1571208
 [test_postMessage_userpass.html]
 [test_bug500328.html]
 skip-if = true || toolkit=='android' # bug 696306, #TIMED_OUT android
