Bug 1587180 - 1. Have Lintpref look for the files included in Lintpref.yml. r=ahal
Rather than statically loading the path to `all.js`, Lintpref should look at any file paths in `lintpref.yml`. Also added the `path` field to each error to accommodate multiple files, and a few other code tidiness cleanups.

Differential Revision: https://phabricator.services.mozilla.com/D48626

--- a/tools/lint/lintpref.yml
+++ b/tools/lint/lintpref.yml
@@ -4,7 +4,7 @@ lintpref:
     include:
         - 'modules/libpref/init'
     exclude: []
-    extensions: ['js', 'yaml']
+    extensions: ['js']
     type: external
     payload: libpref:checkdupes
     support-files:
