Bug 1585421 - Expand the usage of Lintpref into more pref files r=ahal
Adds the filepaths of more pref files to Lintpref as well as to its TaskCluster entry. All of the pref files added are noted in bug 1585421.

Differential Revision: https://phabricator.services.mozilla.com/D49363

--- a/tools/lint/lintpref.yml
+++ b/tools/lint/lintpref.yml
@@ -3,6 +3,12 @@ lintpref:
     description: Linter for static prefs.
     include:
         - 'modules/libpref/init'
+        - 'browser/app/profile/'
+        - 'mobile/android/app/'
+        - 'devtools/client/preferences/'
+        - 'browser/branding/'
+        - 'mobile/android/installer/'
+        - 'mobile/android/locales/'
     exclude: []
     extensions: ['js']
     type: external
