Bug 1589629 - Update multiple-redirect-https-downgrade-upgrade.tentative.sub.html expectancies. r=jgraham
Differential Revision: https://phabricator.services.mozilla.com/D49872

--- a/testing/web-platform/meta/fetch/metadata/redirect/multiple-redirect-https-downgrade-upgrade.tentative.sub.html.ini
+++ b/testing/web-platform/meta/fetch/metadata/redirect/multiple-redirect-https-downgrade-upgrade.tentative.sub.html.ini
@@ -28,10 +28,8 @@
     expected: NOTRUN
 
   [Https downgrade-upgrade prefetch => No headers]
-    expected:
-      if (os == "linux"): ["TIMEOUT", "FAIL"]
-      FAIL
-
+    expected: ["TIMEOUT", "FAIL"]
+      
   [Https downgrade-upgrade embed]
     expected: FAIL
 
