Bug 1587394 - Provide a pref to bypass postMessage COOP and COEP check on Nightly and Dev; r=nika
Differential Revision: https://phabricator.services.mozilla.com/D48713

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1914,6 +1914,12 @@
   value: false
   mirror: always
 
+# Overridden in all.js on RELEASE_OR_BETA in order to add the locked attribute.
+- name: dom.postMessage.sharedArrayBuffer.bypassCOOP_COEP.insecure.enabled
+  type: RelaxedAtomicBool
+  value: false
+  mirror: always
+
 # Presentation API
 - name: dom.presentation.enabled
   type: bool
