Bug 1567175, add a test that verifies that a cross process iframe with a password field saves the password on submit and page navigation, r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D49704

--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -32,6 +32,10 @@ support-files =
   subtst_notifications_9.html
   subtst_notifications_10.html
   subtst_notifications_change_p.html
+[browser_capture_doorhanger_crossframe.js]
+support-files =
+  form_crossframe.html
+  form_crossframe_inner.html
 [browser_capture_doorhanger_empty_password.js]
 skip-if = true # Bug 1272849
 [browser_capture_doorhanger_httpsUpgrade.js]
@@ -93,3 +97,4 @@ support-files =
   subtst_privbrowsing_1.html
   form_password_change.html
 [browser_promptToChangePassword.js]
+
