Bug 1587180 - 4. Write a test for Lintpref r=ahal
Adds a test for Lintpref and two test files. Also makes some adjustments to `lintpref.yml` to improve support file loading.

Differential Revision: https://phabricator.services.mozilla.com/D49674

--- a/tools/lint/lintpref.yml
+++ b/tools/lint/lintpref.yml
@@ -14,4 +14,4 @@ lintpref:
     type: external
     payload: libpref:checkdupes
     support-files:
-        - 'tools/lint/libpref/**'
+        - 'modules/libpref/init/StaticPrefList.yaml'
