Bug 1583314 - Skip or port XBL tests to shadow DOM. r=bzbarsky
Where possible I ported tests to use the shadow DOM. The following could
potentially be ported, but don't think it worth of it:
  test_bug414907.xul - uses children nodes in constructor which is very
different in shadow DOM world
  test_bug233643.xul - really tests XBL behavior
  test_anonymous_content.py - bug on file already to create shadow DOM
test from scratch

Differential Revision: https://phabricator.services.mozilla.com/D49341

--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -10,6 +10,7 @@ support-files =
   doc_inspector_delete-selected-node-01.html
   doc_inspector_delete-selected-node-02.html
   doc_inspector_embed.html
+  doc_inspector_eyedropper_disabled.xhtml
   doc_inspector_highlight_after_transition.html
   doc_inspector_highlighter-comments.html
   doc_inspector_highlighter-geometry_01.html
@@ -23,7 +24,7 @@ support-files =
   doc_inspector_highlighter_rect.html
   doc_inspector_highlighter_rect_iframe.html
   doc_inspector_highlighter_scroll.html
-  doc_inspector_highlighter_xbl.xul
+  doc_inspector_highlighter_custom_element.xhtml
   doc_inspector_infobar_01.html
   doc_inspector_infobar_02.html
   doc_inspector_infobar_03.html
@@ -136,7 +137,7 @@ skip-if = os == 'win' # bug 1413442
 skip-if = (os == 'win' && !debug) # Bug 1449754
 [browser_inspector_highlighter-selector_01.js]
 [browser_inspector_highlighter-selector_02.js]
-[browser_inspector_highlighter-xbl.js]
+[browser_inspector_highlighter-custom-element.js]
 [browser_inspector_highlighter-zoom.js]
 [browser_inspector_iframe-navigation.js]
 [browser_inspector_infobar_01.js]
