--- a/js/xpconnect/tests/chrome/chrome.ini
+++ b/js/xpconnect/tests/chrome/chrome.ini
@@ -22,7 +22,6 @@ support-files =
   !/js/xpconnect/tests/mochitest/file_bug738244.html
   !/js/xpconnect/tests/mochitest/file_bug760131.html
   !/js/xpconnect/tests/mochitest/file_bug795275.html
-  !/js/xpconnect/tests/mochitest/file_bug795275.xml
   !/js/xpconnect/tests/mochitest/file_bug799348.html
   !/js/xpconnect/tests/mochitest/file_bug860494.html
   !/js/xpconnect/tests/mochitest/file_documentdomain.html
@@ -81,6 +80,7 @@ skip-if = os == 'win' || os == 'mac' || (os == 'linux' && !debug) # bug 1131110,
 [test_bug1041626.xhtml]
 [test_bug1042436.xhtml]
 [test_bug1050049.html]
+skip-if = !xbl
 [test_bug1065185.html]
 [test_bug1074863.html]
 [test_bug1092477.xhtml]
