Bug 1557447 - Profiler support for IPC information; r=nika,smaug
This adds the ability to add profile markers for both the sender and recipient
sides of IPC messages. These can then be correlated with one another in the
profile visualization. For the UI component of this patch, see
<https://github.com/firefox-devtools/profiler/pull/2172>.

Differential Revision: https://phabricator.services.mozilla.com/D42226

--- a/tools/profiler/tests/browser/browser.ini
+++ b/tools/profiler/tests/browser/browser.ini
@@ -4,8 +4,10 @@ support-files =
   do_work_500ms.html
   fixed_height.html
   multi_frame.html
+  simple.html
   single_frame.html
 
+[browser_test_feature_ipcmessages.js]
 [browser_test_feature_jsallocations.js]
 [browser_test_feature_preferencereads.js]
 [browser_test_feature_nativeallocations.js]
