Bug 1567175, enable some password manager tests in fission mode, r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D47829

--- a/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
+++ b/toolkit/components/passwordmgr/test/mochitest/mochitest.ini
@@ -68,16 +68,15 @@ skip-if = toolkit == 'android' # bug 1527403
 scheme = https
 skip-if = toolkit == 'android' # Bug 1531185
 [test_autofill_https_downgrade.html]
-skip-if = fission
 scheme = http  # we need http to test handling of https logins on http forms
 [test_autofill_https_upgrade.html]
-skip-if = fission || toolkit == 'android' # Bug 1259768
+skip-if = toolkit == 'android' # Bug 1259768
 [test_autofill_sandboxed.html]
 scheme = https
 skip-if = toolkit == 'android'
 [test_autofill_password-only.html]
 [test_autofocus_js.html]
-fail-if = fission
+fail-if = fission # bug 1582120
 skip-if = toolkit == 'android' # autocomplete
 [test_basic_form.html]
 [test_basic_form_0pw.html]
@@ -136,7 +135,6 @@ support-files =
   subtst_master_pass.html
 [test_maxlength.html]
 [test_munged_username.html]
-fail-if = fission
 scheme = https
 skip-if = toolkit == 'android' # bug 1527403
 [test_one_doorhanger_per_un_pw.html]
@@ -147,12 +145,11 @@ skip-if = toolkit == 'android' # bug 1535505
 [test_prompt.html]
 skip-if = os == "linux" || toolkit == 'android' # Tests desktop prompts
 [test_prompt_async.html]
-fail-if = fission
+fail-if = fission # bug 1582116
 skip-if = toolkit == 'android' # Tests desktop prompts
 support-files = subtst_prompt_async.html
 [test_prompt_http.html]
-skip-if = os == "linux" || toolkit == 'android' # Tests desktop prompts
-fail-if = fission # Bug 1585531
+skip-if = fission || os == "linux" || toolkit == 'android' # Tests desktop prompts, fission bug is 1582117
 [test_prompt_noWindow.html]
 skip-if = e10s || toolkit == 'android' # Tests desktop prompts. e10s: bug 1217876
 [test_password_length.html]
@@ -166,8 +163,6 @@ skip-if = e10s || os == "linux" || toolkit == 'android' # Tests desktop prompts
 [test_username_focus.html]
 skip-if = toolkit == 'android' # android:autocomplete.
 [test_xhr.html]
-skip-if =
-  toolkit == 'android' || # Tests desktop prompts
-  fission # Intermittently times out under Fission.
+skip-if = toolkit == 'android' # Tests desktop prompts
 [test_xhr_2.html]
 
