--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -44,7 +44,7 @@ support-files =
   subtst_notifications_11_popup.html
 skip-if = os == "linux" # Bug 1312981, bug 1313136
 [browser_context_menu_autocomplete_interaction.js]
-skip-if = verify || (fission && debug)
+skip-if = verify
 [browser_username_select_dialog.js]
 support-files =
   subtst_notifications_change_p.html
@@ -63,28 +63,22 @@ support-files =
   form_password_change.html
 [browser_generated_password_private_window.js]
 [browser_http_autofill.js]
-fail-if = fission
+fail-if = fission # bug 1570243
 skip-if = fission || verify
 [browser_hidden_document_autofill.js]
-fail-if = fission
 skip-if = os == "win" && os_version == "10.0" && debug # bug 1530935
 [browser_insecurePasswordConsoleWarning.js]
-skip-if = (fission && debug) || verify
+skip-if = verify
 [browser_master_password_autocomplete.js]
 [browser_notifications.js]
-skip-if = (fission && debug)
 [browser_notifications_username.js]
-skip-if = (fission && debug)
 [browser_notifications_password.js]
-skip-if = (fission && debug)
 [browser_notifications_2.js]
 [browser_openPasswordManager.js]
 [browser_passwordmgr_editing.js]
 skip-if = (os == "linux") || (debug && os == "mac") # Bug 1537634
 [browser_context_menu.js]
-skip-if = (fission && debug)
 [browser_context_menu_iframe.js]
-skip-if = fission
 [browser_context_menu_generated_password.js]
 [browser_passwordmgr_contextmenu.js]
 tags = clipboard
@@ -98,5 +92,4 @@ skip-if = (debug && os == "mac") # Bug 1530566
 support-files =
   subtst_privbrowsing_1.html
   form_password_change.html
-skip-if = fission
 [browser_promptToChangePassword.js]
