Bug 1022386 - Enable form autocomplete tests on Linux r=RyanVM
* https://treeherder.mozilla.org/#/jobs?repo=try&revision=c648ccb8b2ec34d4bfeb74f5bca8e51aa61a138f
* https://treeherder.mozilla.org/#/jobs?repo=try&revision=23cbd6c1d434c747452dd2af8176a33d3346e4be

According to these try pushes, the intermittent timeout has gone by
some other changes.

Only an intermittent failure (bug 1514249) is also reproducible on
Linux (it's enabled only the former try push), but the frequency is
reasonably low since it tests all basic features of autocomplete in
form fields so that it should be available on Linux.

Differential Revision: https://phabricator.services.mozilla.com/D49866

--- a/toolkit/components/satchel/test/mochitest.ini
+++ b/toolkit/components/satchel/test/mochitest.ini
@@ -7,17 +7,14 @@ support-files =
   parent_utils.js
 
 [test_bug_511615.html]
-skip-if = os == 'linux' # bug 1022386
 [test_bug_787624.html]
-skip-if = os == 'linux' # bug 1022386
 [test_datalist_with_caching.html]
 [test_datalist_readonly_change.html]
 [test_datalist_shadow_dom.html]
 [test_form_autocomplete.html]
-skip-if = (verify && debug && (os == 'win')) || (os == 'linux') || (os == 'mac') # linux - bug 1022386 #Bug 1514249
+skip-if = (verify && debug && (os == 'win')) || (os == 'mac') # Bug 1514249
 [test_form_autocomplete_validation_at_input_event.html]
 [test_form_autocomplete_with_list.html]
-skip-if = os == 'linux' # bug 1022386
 [test_form_submission.html]
 fail-if = fission
 [test_form_submission_cap.html]
