Bug 1589783 - Update sccache in-tree to the latest version. r=nalexander
Differential Revision: https://phabricator.services.mozilla.com/D49801

--- a/taskcluster/ci/fetch/toolchains.yml
+++ b/taskcluster/ci/fetch/toolchains.yml
@@ -340,8 +340,8 @@ sccache:
     fetch:
         type: git
         repo: https://github.com/mozilla/sccache
-        # 0.2.12 release
-        revision: 5f2cf631feaf24332dd59c76736f12f26b3c44ea
+        # 0.2.12 release + a handful of fixes
+        revision: b63b5fe6c90f9443a2dbe9a06824a92b138e5365
 
 openssl-1.1.0g:
     description: openssl 1.1.0g source code
